Update README and add start.sh script.
README updated with usage info for Mac and Ubuntu. All files used to create image moved to container dir.

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -12,11 +12,11 @@ RUN conda env create -f env.yaml -n work &&\
 
 ENV PATH=/opt/conda/envs/work/bin/:${PATH}
 
-WORKDIR /tutorial
+WORKDIR /home/tutorial
 
 COPY example-data .
 COPY scanpy-tutorial.ipynb .
 
-WORKDIR /
+WORKDIR /home
 
 CMD ["jupyter", "lab",  "--allow-root", "--port=8888", "--no-browser", "--ip=0.0.0.0"]
