Update README. Add R to container.
The container includes both R and python and relevant packages needed for single cell analysis. README updated to reflect changes.

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -15,7 +15,8 @@ ENV PATH=/opt/conda/envs/work/bin/:${PATH}
 WORKDIR /home/tutorial
 
 COPY example-data .
-COPY scanpy-tutorial.ipynb .
+COPY python-tutorial.ipynb .
+COPY R-tutorial.ipynb .
 
 WORKDIR /home
 
