--- a/container/env.yaml
+++ b/container/env.yaml
@@ -11,6 +11,11 @@ dependencies:
   - pandas==1.1.3
   - numba==0.51.2
   - jupyterlab==2.2.6
-
+  - r-base==4.1.0
+  - r-tidyverse
+  - r-irkernel
+  - r-seurat
+  - r-seuratobject
+  - r-devtools
 
 
