--- a/python-container/env.yaml
+++ b/python-container/env.yaml
@@ -6,12 +6,12 @@ channels:
   - defaults
 
 dependencies:
-  - scanpy==1.6.0
-  - numpy==1.19.1
-  - pandas==1.1.3
-  - numba==0.51.2
-  - jupyterlab==2.2.6
-  - r-base==4.1.0
+  - scanpy
+  - numpy
+  - pandas
+  - numba
+  - jupyterlab
+  - r-base
   - r-tidyverse
   - r-irkernel
   - r-seurat
