--- a/python-container/env.yaml
+++ b/python-container/env.yaml
@@ -6,16 +6,14 @@ channels:
   - defaults
 
 dependencies:
-  - scanpy
-  - numpy
-  - pandas
-  - numba
-  - jupyterlab
-  - r-base
+  - scanpy==1.6.0
+  - numpy==1.19.1
+  - pandas==1.1.3
+  - numba==0.51.2
+  - jupyterlab==2.2.6
+  - r-base==4.1.0
   - r-tidyverse
   - r-irkernel
   - r-seurat
   - r-seuratobject
   - r-devtools
-
-
