update packages and Dockerfile

--- a/python-container/Dockerfile
+++ b/python-container/Dockerfile
@@ -20,4 +20,5 @@ COPY python-tutorial.ipynb .
 
 WORKDIR /home
 
-CMD ["jupyter", "lab", "--allow-root", "--port=8888", "--no-browser", "--ip=0.0.0.0"]
+# CMD ["jupyter", "lab", "--allow-root", "--port=8888", "--no-browser", "--ip=0.0.0.0"]
+CMD ["/bin/bash", "-c", "source ~/.bashrc && conda activate single-cell && jupyter lab --allow-root --port=8888 --no-browser --ip=0.0.0.0"]
