--- a/python-container/env.yaml
+++ b/python-container/env.yaml
@@ -6,12 +6,19 @@ channels:
   - defaults
 
 dependencies:
-  - scanpy==1.6.0
-  - numpy==1.19.1
-  - pandas==1.1.3
-  - numba==0.51.2
+  - scanpy==1.10.4
+  - numpy>=1.20
+  - numba>=0.56
   - jupyterlab==2.2.6
-  - r-base==4.1.0
+  - muon==0.1.6
+  - harmonypy==0.0.10
+  - pyyaml==6.0.2
+  - python-igraph==0.11.8
+  - leidenalg==0.10.2
+  - celltypist==1.6.3
+  - ipykernel==6.29.5
+  - ipywidgets
+  - r-base>=4.2
   - r-tidyverse
   - r-irkernel
   - r-seurat
